# VampireSurvivorsCopy

./: LICENSE  README.md  框架.xmind
VSCproject/: CMakeLists.txt  gamemain.cpp  gamemain.h  gamemain.ui  gameoverdialog.cpp  gameoverdialog.h  gameoverdialog.ui  gameres.qrc  main.cpp  menu.cpp  menu.h  menu.ui  savedialog.cpp  savedialog.h  savedialog.ui  selectdialog.cpp  selectdialog.h  selectdialog.ui  storedialog.cpp  storedialog.h  storedialog.ui  upgradedialog.cpp  upgradedialog.h  upgradedialog.ui
VSCproject/EssentialClasses/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  GameMap.cpp  GameMap.h  GameRule.cpp  GameRule.h  GameState.cpp  GameState.h  GlobalVariables.h  Person.cpp  Person.h  Player.cpp  Player.h  Weapon.cpp  Weapon.h
VSCproject/GameLogic/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  EnemyController.cpp  EnemyController.h  ExpBall.cpp  ExpBall.h  GameMap.cpp  GameMap.h  GameState.cpp  GameState.h  Hero.cpp  Hero.h  Option.cpp  Option.h  PaintInfo.cpp  PaintInfo.h  Weapon.cpp  Weapon.h  config.cpp  config.h
VSCproject/MapConfigs/: map1_br.txt
VSCproject/Saves/: save1.txt  save2.txt  save3.jwz  save3.txt  save4.txt  saves.txt
